--- a/assets/form.css
+++ b/assets/form.css
@@ -1,7 +1,7 @@
 /* Estilo básico del body */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f7f0de;
+    background-color: #eeeeee;
     margin: 0;
     padding: 20px;
 }
